--- a/CodeNameFive/Info.plist
+++ b/CodeNameFive/Info.plist
@@ -60,5 +60,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Need to Acsess Location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Need to Acsess Location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Need to Acsess Location</string>
 </dict>
 </plist>
