Finishing Table View

--- a/CodeNameFive/Info.plist
+++ b/CodeNameFive/Info.plist
@@ -20,6 +20,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Need to Acsess Location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Need to Acsess Location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Need to Acsess Location</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -47,11 +53,11 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarHidden</key>
+	<false/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
@@ -60,11 +66,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Need to Acsess Location</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Need to Acsess Location</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Need to Acsess Location</string>
 </dict>
 </plist>
