--- a/CodeNameFive/Info.plist
+++ b/CodeNameFive/Info.plist
@@ -102,5 +102,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSFaceIDUsageDescription</key>
+	<string>For Loin we need to access your FaceId</string>
 </dict>
 </plist>
